--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
   output-dir: docs
 website:
-  title: "Stats 4 CS"
+  title: "{{< var course.code >}}"
   search: true
   site-url: "{{< var course.site >}}"
   navbar:
