add tim's photo and audio

--- a/_variables.yml
+++ b/_variables.yml
@@ -29,7 +29,7 @@ instructor:
   
 ta1: 
   name: Zhengtao Gui (Lec A)
-  email: "zhengtag@uci.edu@uci.edu"
+  email: "zhengtag@uci.edu"
   pronoun: "he/him"
   photo: "img/ta1.jpeg"
   audio: "ta1.mp3"
