--- a/_variables.yml
+++ b/_variables.yml
@@ -44,7 +44,7 @@ ta2:
   pronoun: "??"
   photo: "img/ta2.jpeg"
   audio: "ta2.mp3"
-  office-hours: "TBD in person and online"
+  office-hours: "Th 12 - 1 pm and F 1 - 2 pm in person and online"
   office: "DBH TBD"
   zoom: "TBD"
   
