--- a/_variables.yml
+++ b/_variables.yml
@@ -41,7 +41,7 @@ ta1:
 ta2: 
   name: Yuanpeng (Tim) Li (Lec B)
   email: "yuanpl2@uci.edu"
-  pronoun: "??"
+  pronoun: "he/him"
   photo: "img/ta2.jpeg"
   audio: "ta2.mp3"
   office-hours: "Th 12 - 1 pm and F 1 - 2 pm in person and online"
