--- a/_variables.yml
+++ b/_variables.yml
@@ -45,7 +45,7 @@ ta2:
   photo: "img/ta2.jpeg"
   audio: "ta2.mp3"
   office-hours: "Th 12 - 1 pm and F 1 - 2 pm in person and online"
-  office: "DBH 2013 (on Th) and DBH 2221 on F"
+  office: "DBH 2013 on Th and DBH 2221 on F"
   zoom: "https://uci.zoom.us/j/91636499499"
   
 ta3: 
